Upgrade to Solr 9.0
- Updated Solr schema to the latest version.
- Removed deprecated HttpSolrClientFactory and SolrClientProxy.
- Removed Solr core and Lucene dependencies since the embedded
  Solr server was removed in a previous release.
- Embedded JTS and Spatial4j in Solr related bundles since the version
  of JTS required for Spatial4j is not compatible with Geotools and JTS
  does not follow semantic versioning.
- Updated the Failsafe retry library to help simplify the Solr client
  collection creation and provider field cache retry logic.